fixed alignment issues with scale transform

--- a/src/app/shared/ui/header/header.component.scss
+++ b/src/app/shared/ui/header/header.component.scss
@@ -22,7 +22,7 @@ header {
   background-color: palette(black, lighter);
   z-index: 12;
 
-  @include rem(padding, 20px 10px);
+  @include rem(padding, 0 10px);
 
   > .header__content_nav {
     flex-shrink: 1;
@@ -30,6 +30,8 @@ header {
     min-width: 0;
     display: flex;
     align-items: center;
+
+    @include rem(padding, 20px 0);
   }
 
   > .header__content_nav > * {
