--- a/src/app/shared/ui/notifications/notifications.component.scss
+++ b/src/app/shared/ui/notifications/notifications.component.scss
@@ -2,9 +2,11 @@
 @import '../../../../style/abstracts/palette';
 
 :host {
-  display: block;
+  display: flex;
   position: relative;
   z-index: -1;
+  align-self: stretch;
+  align-items: center;
 }
 
 button {
@@ -13,6 +15,7 @@ button {
   color: #fff;
   position: relative;
   z-index: 10;
+  padding: 0;
 
   > i {
     vertical-align: middle;
@@ -39,6 +42,13 @@ button {
   }
 }
 
+.btn-header-wrapper {
+  @include rem((
+    height: 24px,
+    padding: 0 15px
+  ));
+}
+
 button.active > .badge {
   border-color: #fff;
 }
@@ -52,5 +62,5 @@ button.active > .badge {
   background-color: palette(blue);
   z-index: 9;
   opacity: 1;
-  transform: scale(1.5, 2.64);
+  transform: scale(1, 1);
 }
