--- a/src/app/shared/ui/search/search-tray.component.scss
+++ b/src/app/shared/ui/search/search-tray.component.scss
@@ -12,8 +12,8 @@
   z-index: 2;
 
   @include rem((
-    top: 51px,
-    right: -20px,
+    top: 71px,
+    right: 0,
     height: 340px,
     width: 620px,
     padding: 20px
